--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@ li {
 <h1>⚠ THE MEF FIELD MANUAL ⚠</h1>
 <h3 style="margin-top: 0; color: var(--muted);">Total Metabolic Reset · Pain Elimination · Seconds-Based Accountability</h3>
 
-<!-- Operator Info -->
+<!-- Operator Info 
 <div class="header-info">
   <label>
     Operator Name
@@ -418,6 +418,7 @@ li {
     <input type="date" id="start-date">
   </label>
 </div>
+Operator Info -->
 
 <!-- PART I: MISSION MATH -->
 <div class="block" id="mission">
