--- a/index.html
+++ b/index.html
@@ -629,7 +629,7 @@ li {
   Seconds-Based Accountability
 </h3>
 
-<!-- Operator Info -->
+<!-- Operator Info
 <div class="header-info">
   <label>
     Operator Name
@@ -648,7 +648,8 @@ li {
     <input type="date" id="start-date">
   </label>
 </div>
-
+Operator Info -->
+  
 <!-- PART I: MISSION MATH -->
 <div class="block" id="mission">
 <h2>PART I: THE MISSION MATH</h2>
