--- a/index.html
+++ b/index.html
@@ -656,13 +656,14 @@ Operator Info -->
 
 <p><span class="red">Primary Objective:</span> Systematic destruction of excess body fat through metabolic reset and disciplined suffering.</p>
 
+<!-- CALORIE CEILING
 <h3>DAILY CALORIE CEILING</h3>
 <p><span class="emphasis">1500 kcal/day — ABSOLUTE MAXIMUM</span></p>
 <p>Every single calorie consumed carries an immediate Pain Tax measured in seconds of physical exertion. There is no credit. There is no tomorrow. <span class="red">Eat → Pay → Immediately.</span></p>
 
 <h3>PAIN TAX PRINCIPLE</h3>
 <p>The Pain Tax is the core accountability mechanism of this system. It transforms abstract calories into concrete physical debt.</p>
-
+ -->
 <ul>
   <li><strong>Protein Tax:</strong> 1 second per calorie</li>
   <li><strong>Fat Tax:</strong> 2 seconds per calorie</li>
