--- a/index.html
+++ b/index.html
@@ -665,7 +665,7 @@ Operator Info -->
 <p>The Pain Tax is the core accountability mechanism of this system. It transforms abstract calories into concrete physical debt.</p>
  -->
 <ul>
-  <li><strong>Protein Tax:</strong> .5 second per calorie</li>
+  <li><strong>Protein Tax:</strong> 1 second per calorie</li>
   <li><strong>Fat Tax:</strong> 1 seconds per calorie</li>
   <li><strong>Carbohydrate Tax:</strong> 2 seconds per calorie</li>
   <li><strong>No Carryover:</strong> Debt cannot be deferred to tomorrow</li>
@@ -705,19 +705,19 @@ Operator Info -->
 <h3>STRATEGIC IMPLICATIONS</h3>
 <ul>
   <li><strong>Protein is Favored:</strong> Maximum satiety, muscle preservation, lowest tax burden (1 sec/cal)</li>
-  <li><strong>Fat is Moderate:</strong> Essential for hormones, medium penalty encourages moderation (2 sec/cal)</li>
-  <li><strong>Carbs are Punished:</strong> Highest penalty reflects insulin impact and ease of overconsumption (3 sec/cal)</li>
+  <li><strong>Fat is Moderate:</strong> Essential for hormones, medium penalty encourages moderation (1 sec/cal)</li>
+  <li><strong>Carbs are Punished:</strong> Highest penalty reflects insulin impact and ease of overconsumption (2 sec/cal)</li>
 </ul>
 
 <h3>EXAMPLE CALCULATIONS</h3>
 <div style="background: var(--paper); padding: 15px; margin: 15px 0;">
 <p><strong>200 calories from chicken breast (46g protein, 4g fat):</strong></p>
-<p>Tax = (184 cal protein × 1) + (36 cal fat × 2) = 184 + 72 = <span class="red">256 seconds</span></p>
+<p>Tax = (184 cal protein × 1) + (36 cal fat × 1) = 184 + 36 = <span class="red">220 seconds</span></p>
 
 <p><strong>200 calories from pasta (44g carbs, 2g protein):</strong></p>
-<p>Tax = (176 cal carbs × 3) + (8 cal protein × 1) = 528 + 8 = <span class="red">536 seconds</span></p>
+<p>Tax = (176 cal carbs × 2) + (8 cal protein × 1) = 352 + 8 = <span class="red">360 seconds</span></p>
 
-<p><strong>Outcome:</strong> The pasta costs 110% more suffering for identical calories.</p>
+<p><strong>Outcome:</strong> The pasta incurs a bigger tax for identical calories.</p>
 </div>
 </div>
 
@@ -753,15 +753,13 @@ Operator Info -->
 <h4>1900 — BASELINE DRILLS</h4>
 <p>Mandatory strength circuit (perform in order):</p>
 <ul>
-  <li>Pushups: 50-60 seconds</li>
-  <li>Squats: 50-60 seconds</li>
-  <li>Lunges: 50 seconds (alternating)</li>
-  <li>Crunches: 50 seconds</li>
-  <li>Burpees: 30 seconds</li>
-  <li>Bulgarian Split Squats: 40 seconds (20 each leg)</li>
-  <li>Plank: 120 seconds</li>
+  <li>Pushups: 30 seconds (2 sets)</li>
+  <li>Squats: 30 seconds (2 sets)</li>
+  <li>Crunches: 30 seconds (2 sets)</li>
+  <li>Plank: 30 seconds (2 sets)</li>
+  <li>Lunges: 30 seconds (alternating) (2 sets)</li>
 </ul>
-<p><span class="red">Total: ~450 seconds of baseline strength work daily</span></p>
+<p><span class="red">Total: ~300 seconds of baseline strength work daily</span></p>
 
 <h3>ADDITIONAL PROTOCOLS</h3>
 <ul>
