--- a/index.html
+++ b/index.html
@@ -538,7 +538,8 @@ li {
   }
   
   h1 {
-    font-size: 1.8rem;
+    font-size: 1.4rem;
+    white-space: nowrap;
   }
   
   h2 {
@@ -1000,7 +1001,7 @@ Operator Info -->
     </label>
   </div>
   
-  <button onclick="calculatePainTax()">⚠ CALCULATE PAIN TAX ⚠</button>
+  <button onclick="calculatePainTax()">⚠ CALCULATE TAX ⚠</button>
 
   <div class="results" id="results-section" style="display: none;">
     <h3>Your Debt</h3>
